feat: implement site disign refresh, work in progress
The video width is still not behaving correctly 
at certain resolutions.

--- a/src/_includes/layouts/page.njk
+++ b/src/_includes/layouts/page.njk
@@ -12,7 +12,7 @@
 <div>
   <article>
     <h1 class="title">{{ pageTitle }}</h1>
-    <div class="api-content">
+    <div class="api-content homepage-content">
     {{ content | safe }}
     </div>
   </article>
