--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -19,17 +19,11 @@ header {
 		}
 
 		input[type="search"] {
-			border-radius: 50%;
+			border-radius: rem(16);
 			box-shadow: $border-shadow-light;
 			outline: none;
-			padding: rem(8) rem(16);
-			width: rem(16);
-
-			&:focus {
-				border-radius: rem(28);
-				padding-left: rem(32);
-				width: rem(160);
-			}
+			padding: rem(8) rem(16) rem(8) rem(32);
+			width: rem(160);
 		}
 	}
 
