--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -44,6 +44,7 @@ header {
 			.nav-smallScreen {
 				display: flex;
 				flex-direction: column;
+				padding: 0.5rem 0;
 				position: relative;
 
 				.starter-nav {
