feat: remove navy-dark def & use, no longer needed

--- a/src/scss/components/_brand.scss
+++ b/src/scss/components/_brand.scss
@@ -5,7 +5,7 @@
 
 	a {
 		align-items: center;
-		color: $navy-dark;
+		color: $black;
 		display: flex;
 		height: inherit;
 		padding-right: rem(16);
