--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -9,6 +9,9 @@ $font-weight-bold: 700;
 
 /** Max Widths **/
 $max-width-margins: rem(1600);
+// the ch widths represent the max width of the 'main' element in narrow and wide viewports
+$full-width-video-margins: calc(-50vw + min(37.5ch, 50%));
+$full-width-video-widescreen-margins: calc(-50vw + min(65ch, 50%));
 
 /** Colors **/
 
@@ -29,7 +32,6 @@ $grey-lighter: #f3f3f3;
 $grey-light: #6c6c6c;
 $grey-dark: #313131;
 $grey-shade: #c4c4c4;
-$navy-dark: #162439;
 $navy: #203149;
 $navy-light: #2e405b;
 
@@ -50,6 +52,9 @@ $orange-focus: #fadc90;
 $orange-light: #5c81a9;
 
 $yellow: #ffcb70;
+
+$border-shadow-radius: 4px;
+$border-shadow-light: 0 0 $border-shadow-radius rgba(0, 0, 0, 0.25);
 
 // UIO themes
 $UIOThemes:
