--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -11,6 +11,7 @@ footer {
 	color: $white;
 	margin-top: rem(30);
 	padding: rem(16) rem(32);
+	text-align: center;
 
 	a {
 		color: $white;
@@ -23,7 +24,6 @@ footer {
 
 	.netlify-notice {
 		padding-top: rem(32);
-		text-align: center;
 
 		a {
 			font-weight: $font-weight-normal;
@@ -50,8 +50,6 @@ footer {
 			}
 
 			div {
-				text-align: center;
-
 				.funder-logo {
 					display: inline-block;
 				}
@@ -71,6 +69,32 @@ footer {
 			}
 		}
 
+		.subscribe {
+			a {
+				background-color: $white;
+				border-radius: rem(28);
+				color: $navy-light;
+				padding: rem(8) rem(8);
+
+				&:hover,
+				&:focus {
+					background-color: $navy-light;
+					border: solid 1px $white;
+					color: $white;
+				}
+			}
+
+			hr {
+				background: $white;
+				margin-top: rem(48);
+				width: 100%;
+			}
+
+			.subscribe-text {
+				margin-bottom: rem(32);
+			}
+		}
+
 		.contact-info {
 			width: 100%;
 
@@ -87,8 +111,6 @@ footer {
 			}
 
 			.footer-logos {
-				text-align: center;
-
 				a {
 					display: inline-block;
 				}
@@ -116,10 +138,6 @@ footer {
 		.social-media {
 			align-self: center;
 			padding-bottom: rem(32);
-
-			h2 {
-				text-align: center;
-			}
 
 			.social-media-icons {
 				display: grid;
@@ -185,11 +203,8 @@ footer {
 			.funders {
 				align-self: end;
 				grid-column: 2/3;
-				grid-row: 2/3;
-
-				div {
-					text-align: start;
-				}
+				grid-row: 3/3;
+				text-align: start;
 
 				svg {
 					margin-bottom: rem(16);
@@ -203,7 +218,8 @@ footer {
 
 			.contact-info {
 				grid-column: 1/2;
-				grid-row: 2/3;
+				grid-row: 3/3;
+				text-align: start;
 
 				.idrc-logo {
 					height: rem(96);
@@ -226,6 +242,7 @@ footer {
 
 			.social-media {
 				align-self: auto;
+				grid-row: 2;
 
 				h2 {
 					text-align: start;
@@ -259,6 +276,21 @@ footer {
 						height: rem(50);
 						width: rem(50);
 					}
+				}
+			}
+
+			.subscribe {
+				grid-column: span 2;
+				grid-row: 1;
+				text-align: left;
+
+				a {
+					padding: rem(16) rem(32);
+				}
+
+				hr {
+					background: $white;
+					width: 100%;
 				}
 			}
 		}
