--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -19,25 +19,24 @@ header {
 		}
 
 		input[type="search"] {
-			border: 0;
-			border-radius: 50%;
+			border-radius: rem(16);
+			box-shadow: $border-shadow-light;
 			outline: none;
-			padding: rem(8) rem(16);
-			width: rem(16);
-
-			&:focus {
-				border-radius: rem(28);
-				padding-left: rem(32);
-				width: rem(160);
-			}
+			padding: rem(8) rem(16) rem(8) rem(32);
+			width: rem(160);
 		}
 	}
 
 	.site-nav-wrapper {
-		background-color: $navy-light;
+		background-color: $white;
 		width: 100%;
 
 		.site-nav {
+			// drop shadow around nav element
+			box-shadow: $border-shadow-light;
+			// spacing for drop shadow, due to clipping by the next element
+			margin-bottom: $border-shadow-radius;
+
 			.nav-wideScreen {
 				display: none;
 			}
@@ -45,6 +44,7 @@ header {
 			.nav-smallScreen {
 				display: flex;
 				flex-direction: column;
+				padding: 0.5rem 0;
 				position: relative;
 
 				.starter-nav {
@@ -62,7 +62,7 @@ header {
 						border: none;
 						border-radius: 0;
 						box-shadow: none;
-						color: $white;
+						color: $black;
 						padding: rem(8);
 
 						svg {
@@ -80,7 +80,6 @@ header {
 					button:hover,
 					button:focus {
 						background-color: $orange-focus;
-						color: $navy-light;
 					}
 
 					#menuToggleButton .screen-reader-only {
@@ -89,30 +88,31 @@ header {
 				}
 			}
 
+			// To make room for the box-shadow on nav container
+			.content-wrapper {
+				margin-top: 4px;
+			}
+
 			// Styles for the navigation menu
 			nav.primary-nav {
-				background: $navy-dark;
+				background: $white;
 				display: none;
 				position: absolute;
-				top: rem(48);
+				top: rem(56);
 				width: 100vw;
 				z-index: 2;
 
 				a {
 					border-bottom: solid rem(2);
-					color: $white;
+					color: $black;
 					display: block;
 					float: none;
 					font-size: rem(18) !important; // Enactors.css in infusion uses !important on this element
 					font-weight: $font-weight-normal;
 					margin: rem(16) rem(16);
 					text-align: left;
+					text-transform: uppercase;
 					white-space: nowrap;
-
-					&:hover,
-					&:focus {
-						color: $navy-light;
-					}
 				}
 			}
 		}
@@ -149,6 +149,7 @@ header {
 					flex-direction: row;
 					justify-content: space-between;
 					margin: auto;
+					margin-top: 1rem;
 					max-width: $max-width-margins;
 					padding: 0 rem(16);
 				}
