--- a/src/_includes/components/tile-item-resource.njk
+++ b/src/_includes/components/tile-item-resource.njk
@@ -18,7 +18,7 @@
       {% endif %}
       <div class="info">
         {# TODO: look up and show topic based on this item's focus #}
-        Focus: {{ focus | safe }}
+        Topic: {{ focus | categoryFromFocus(resourceCategories.resourceCategories) }}
       </div>
       {% if tags %}
       <div class="info">
