--- a/src/_includes/layouts/resources.njk
+++ b/src/_includes/layouts/resources.njk
@@ -31,7 +31,7 @@ pagination:
     <h1>{{ title }}</h1>
     {{ content | safe }}
 
-    <form method="get" action="/views/">
+    <form method="get" action="/resources/">
       {# TODO: review the language used for search instruction and labelling #}
       {% set placeholderForSearch = "Search resources..." %}
       {% set ariaLabelForSearch = "Enter keywords for a search in resources" %}
@@ -62,4 +62,141 @@ pagination:
       {% include 'components/pagination.njk' %}
     {% endif %}
   </article>
+
+  {# For displaying dynamic search and filtering results #}
+  <article class="resources dynamic-view">
+        <h1>{{ title }}</h1>
+        {{ content | safe }}
+
+    <form method="get" action="/resources/">
+      {# TODO: add :value to the search-container template and use template here #}
+      {# Search #}
+      <div class="search-container">
+        <svg><use xlink:href="#search" /></svg>
+        <input type="search" name="s" :value="searchTerm" placeholder="Search resources..." aria-label="Enter keywords for a search in resources">
+      </div>
+
+      {# Filter #}
+      <div class="filter">
+        <div class="filter-header">
+          <h2 class="h3">Search Filters</h2>
+          <button type="button" class="filter-expand-button" aria-expanded="true" aria-label="collapse">
+            <svg class="arrowdown" aria-label="hidden"><use xlink:href="#arrowdown" /></svg>
+            <svg class="arrowup" aria-label="hidden"><use xlink:href="#arrowup" /></svg>
+          </button>
+        </div>
+
+        <div class="filter-body">
+          <ul class="filter-choices">
+            <li v-for="tag in tags">
+              <input class="filter-checkbox" type="checkbox" v-model="tag.checked" :id="tag.value" :name="tag.value">
+              <label :for="tag.value">{{ '{{ tag.label }}' }}</label>
+            </li>
+          </ul>
+
+          <div class="filter-buttons">
+            <button class="apply-button" type="submit">
+              <svg><use xlink:href="#apply" /></svg><span>Apply Filters</span>
+            </button>
+            <button class="reset-button" type="button">
+              <svg><use xlink:href="#reset" /></svg><span>Reset Filters</span>
+            </button>
+          </div>
+        </div>
+      </div>
+    </form>
+
+    <h3 role="status" class="search-result" v-if="searchResult">{{ '{{ searchResult }}' }}</h3>
+
+    <div class="applied-tags" v-if="selectedTags.length > 0">
+      <h4 class="search-for-title">Applied Tags:</p>
+      <div class="tags">
+        <a v-for="tag in selectedTags" :href="'/tags/' + tag.value + '/'">{{ '{{ tag.name }}' }}</a>
+      </div>
+    </div>
+
+    <div class="search-term-container" v-if="searchTerm">
+      <h4 class="search-for-title">Search Term:</h4>
+      <p class="search-term">“{{ '{{ searchTerm }}' }}”</p>
+    </div>
+
+    <div class="api-content" v-if="resultsToDisplay.length > 0">
+      <a v-for="item in resultsToDisplay" :key="item.id" :href="item.url">
+        <div class="tile-item">
+          <div class="tile-resource">
+            <h2 class="h3">{{ '{{ item.title }}' }}</h2>
+            <div class="info">
+              Media Type: {{ '{{ item.mediaType }}' }}
+            </div>
+            <div class="info">
+              Focus: {{ '{{ item.focus }}' }}
+            </div>
+          </div>
+        </div>
+      </a>
+    </div>
+
+    {# TODO: The pagination layout below can go into a sharable vue template script
+    when https://github.com/11ty/eleventy-plugin-vue is released #}
+    <nav v-if="pagination" class="pagination" aria-label="pagination">
+      <ul class="pagination-list">
+        <li>
+          <a v-if="pagination.href.previous" :href="pagination.href.previous" class="pagination-previous">
+            <svg><use xlink:href="#previous" /></svg>
+            <span class="screen-reader-only">previous</span>
+          </a>
+        </li>
+        <li v-if="pagination.pageNumber > 1">
+          <a :href="pagination.href.first" class="pagination-link">1</a>
+        </li>
+        <li v-if="pagination.pageNumber > 2" class="pagination-ellipsis">
+          <span>&hellip;</span>
+        </li>
+
+        <li v-if="pagination.pageNumber > 0" v-bind:class="{'hide-on-mobile': pagination.hideProceedingPageButton}">
+          <a :href="pagination.href.previous" class="pagination-link">
+            {{ '{{ pagination.pageNumber }}' }}
+          </a>
+        </li>
+
+        <li>
+          <a :href="pagination.hrefs[pagination.pageNumber]" class="pagination-link is-current" aria-current="page">
+            {{ '{{ pagination.pageNumber + 1 }}' }}
+          </a>
+        </li>
+
+        <li v-if="pagination.pageNumber < pagination.pages.length - 2" v-bind:class="{'hide-on-mobile': pagination.hideFollowingPageButton}">
+          <a :href="pagination.hrefs[pagination.pageNumber + 1]" class="pagination-link">
+            {{ '{{ pagination.pageNumber + 2 }}' }}
+          </a>
+        </li>
+
+        <li v-if="pagination.pageNumber < pagination.pages.length - 3" class="pagination-ellipsis">
+          <span>&hellip;</span>
+        </li>
+        <li v-if="pagination.pageNumber < pagination.pages.length - 1">
+          <a :href="pagination.href.last" class="pagination-link">
+            {{ '{{ pagination.pages.length }}' }}
+          </a>
+        </li>
+        <li>
+          <a v-if="pagination.href.next" :href="pagination.href.next" class="pagination-next">
+            <svg><use xlink:href="#next" /></svg>
+            <span class="screen-reader-only">next</span>
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </article>
+{% endblock %}
+
+{% block headerScripts %}
+<script src="https://cdn.jsdelivr.net/npm/vue@2.6.11"></script>
+{% endblock %}
+
+{% block footerScripts %}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
+<script src="/js/utils.js"></script>
+<script src="/js/content-header-observer.js"></script>
+<script src="/js/resources-dynamic-handler.js"></script>
 {% endblock %}
