feat: fix resources page dynamic cards' topic

--- a/src/_includes/layouts/resources.njk
+++ b/src/_includes/layouts/resources.njk
@@ -146,7 +146,7 @@ pagination:
             </div>
 
             <div class="info">
-              Topic: {{ '{{ resourceCategories[focus] }}' }}
+              Topic: {{ '{{ resourceCategories.filter(cat => cat.focuses.includes(item.focus))[0].categoryLabel }}' }}
             </div>
 
             <div class="info" v-if="item.learnTags">
