--- a/src/_includes/layouts/resources.njk
+++ b/src/_includes/layouts/resources.njk
@@ -25,6 +25,32 @@ pagination:
     <symbol id="reset" viewBox="0 0 26 26" fill="none">
       {% include 'svg/reset.svg' %}
     </symbol>
+
+    {# for the tile items #}
+    <symbol id="media-type" viewBox="0 0 15 15" fill="none">
+      {% include 'svg/media-type.svg' %}
+    </symbol>
+    <symbol id="readability" viewBox="0 0 15 15" fill="none">
+      {% include 'svg/readability.svg' %}
+    </symbol>
+    <symbol id="tags" viewBox="0 0 15 15" fill="none">
+      {% include 'svg/tags.svg' %}
+    </symbol>
+    <symbol id="topics" viewBox="0 0 15 15" fill="none">
+      {% include 'svg/topics.svg' %}
+    </symbol>
+    <symbol id="topic-ai-and-disability" viewBox="0 0 95 95" fill="none">
+      {% include 'svg/topic-ai-and-disability.svg' %}
+    </symbol>
+    <symbol id="topic-ai-fairness-ethics-and-policy" viewBox="0 0 95 95" fill="none">
+      {% include 'svg/topic-ai-fairness-ethics-and-policy.svg' %}
+    </symbol>
+    <symbol id="topic-technical-information" viewBox="0 0 95 95" fill="none">
+      {% include 'svg/topic-technical-information.svg' %}
+    </symbol>
+    <symbol id="topic-work-for-pwd-in-data-science" viewBox="0 0 95 95" fill="none">
+      {% include 'svg/topic-work-for-pwd-in-data-science.svg' %}
+    </symbol>
   </svg>
 
   <article class="resources static-view">
