--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -29,6 +29,7 @@ $gold-light: #ffe6a7;
 // Secondary
 $black: #000;
 $grey-lighter: #f3f3f3;
+$grey-mid-light: #e7e7e7;
 $grey-light: #6c6c6c;
 $grey-dark: #313131;
 $grey-shade: #c4c4c4;
