--- a/src/scss/components/_tile-item.scss
+++ b/src/scss/components/_tile-item.scss
@@ -39,6 +39,49 @@
 		}
 	}
 
+	.tile-resource {
+		.h3 {
+			border-bottom: none;
+			color: $green-dark;
+			padding-bottom: 0;
+		}
+
+		.info {
+			color: $black;
+			font-weight: $font-weight-normal;
+			margin-top: rem(16);
+
+			svg {
+				height: rem(20);
+				margin-right: rem(12);
+				width: rem(20);
+			}
+
+			.resource-readability-list {
+				display: inline;
+				list-style: none;
+				padding-left: 0;
+
+				li {
+					display: inline;
+				}
+			}
+
+			.resource-tags-list {
+				margin: rem(16) 0 0 0;
+				padding-left: 0;
+
+				li {
+					background: $grey-mid-light;
+					border-radius: rem(32);
+					display: inline-block;
+					margin: 0 rem(12) rem(12) 0;
+					padding: rem(4) rem(16);
+				}
+			}
+		}
+	}
+
 	// Initiative images
 	.tile-image {
 		display: none;
