--- a/src/_includes/components/filter-resources.njk
+++ b/src/_includes/components/filter-resources.njk
@@ -1,27 +1,38 @@
 <div class="filter">
-  {# Topic selections #}
-  <ul>
-    {% for category in resourceCategories.resourceCategories %}
-      {# Since there are multiple filters on the page (both for the static view and for the dynamic view),
-      randomize checkbox IDs to ensure they're unique and avoid html validation errors #}
-      {% set categoryId = category.categoryId | randomizeFilter %}
-      <li>
-        <input class="filter-checkbox" type="checkbox" id="{{ categoryId }}" name="{{ 'c_' + category.categoryId | slug }}">
-        <label for="{{ categoryId }}">{{ category.categoryLabel }}</label>
-      </li>
-    {% endfor %}
-  </ul>
-
   <div class="filter-header">
     {# TODO: Dedupe this control #}
-    <h2 class="h3">{{ tagsFilterTitle }}</h2>
-    <button type="button" class="filter-expand-button" aria-expanded="false" aria-label="expand">
+    <h2 class="h3">{{ topicsFilterTitle }}</h2>
+    <button type="button" class="filter-expand-button" data-section="topics" aria-expanded="false" aria-label="expand">
       <svg class="arrowdown" aria-label="hidden"><use xlink:href="#arrowdown" /></svg>
       <svg class="arrowup" aria-label="hidden"><use xlink:href="#arrowup" /></svg>
     </button>
   </div>
 
-  <div class="filter-body">
+  {# Topic selections #}
+  <div class="filter-body" data-section="topics">
+    <ul>
+      {% for category in resourceCategories.resourceCategories %}
+        {# Since there are multiple filters on the page (both for the static view and for the dynamic view),
+        randomize checkbox IDs to ensure they're unique and avoid html validation errors #}
+        {% set categoryId = category.categoryId | randomizeFilter %}
+        <li>
+          <input class="filter-checkbox" type="checkbox" id="{{ categoryId }}" name="{{ 'c_' + category.categoryId | slug }}">
+          <label for="{{ categoryId }}">{{ category.categoryLabel }}</label>
+        </li>
+      {% endfor %}
+    </ul>
+  </div>
+
+  <div class="filter-header">
+    {# TODO: Dedupe this control #}
+    <h2 class="h3">{{ tagsFilterTitle }}</h2>
+    <button type="button" class="filter-expand-button" data-section="tags" aria-expanded="false" aria-label="expand">
+      <svg class="arrowdown" aria-label="hidden"><use xlink:href="#arrowdown" /></svg>
+      <svg class="arrowup" aria-label="hidden"><use xlink:href="#arrowup" /></svg>
+    </button>
+  </div>
+
+  <div class="filter-body" data-section="tags">
     {# Tag selections #}
     <ul class="filter-choices">
       {% for tag in resourceTags.resourceTags  %}
@@ -34,7 +45,16 @@
     </ul>
   </div>
 
-  <div class="filter-body">
+  <div class="filter-header">
+    {# TODO: Dedupe this control #}
+    <h2 class="h3">{{ typeFilterTitle }}</h2>
+    <button type="button" class="filter-expand-button" data-section="types" aria-expanded="false" aria-label="expand">
+      <svg class="arrowdown" aria-label="hidden"><use xlink:href="#arrowdown" /></svg>
+      <svg class="arrowup" aria-label="hidden"><use xlink:href="#arrowup" /></svg>
+    </button>
+  </div>
+
+  <div class="filter-body" data-section="types">
     {# Media Type selections #}
     <ul class="filter-choices">
       {% for mediaType in resourceTypes.resourceTypes  %}
