--- a/src/scss/components/_resources.scss
+++ b/src/scss/components/_resources.scss
@@ -6,6 +6,13 @@
 		grid-template-columns: 1fr 1fr;
 		row-gap: 3rem;
 	}
+
+	.search-container {
+		input[type="search"] {
+			border: none;
+			box-shadow: 0 0 rem(7) rgba(0, 0, 0, 0.25);
+		}
+	}
 }
 
 .tile-item {
