feat: add resources page content

--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -28,6 +28,7 @@ $gold-light: #ffe6a7;
 
 // Secondary
 $black: #000;
+$grey-lightest: #f8f8f8;
 $grey-lighter: #f3f3f3;
 $grey-mid-light: #e7e7e7;
 $grey-light: #6c6c6c;
